--- a/app/views/help/show.html.erb
+++ b/app/views/help/show.html.erb
@@ -35,7 +35,7 @@
   <h2 id="what-is-caseflow">1. What is Caseflow Certification?</h2>
 
   <p>
-    Caseflow Certification, is a web-based tool that pre-fills the electronic Form 8 for paperless appeals and checks case documents for readiness for certification. The tool was built by the
+    Caseflow Certification is a web-based tool that pre-fills the electronic Form 8 for paperless appeals and checks case documents for readiness for certification. The tool was built by the
     United States Digital Service at the Department of Veterans Affairs, in close
     collaboration with Decision Review Officers and other employees in regional
     offices all over the country.
